# tetris

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: Networking.cpp  Networking.h
src/: main.cpp
src/application/client/: Tetris.cpp  Tetris.h
src/application/client/state/: ApplicationState.h
src/application/client/state/game/: Board.cpp  Board.h  Game.cpp  Game.h
src/application/client/state/main_menu/: MainMenu.h
src/application/client/state/menu/: Menu.cpp  Menu.h
src/application/io/: Window.cpp  Window.h
src/application/io/input/: InputAdapter.cpp  InputAdapter.h  InputData.cpp  InputData.h  SDLInputAdapter.cpp  SDLInputAdapter.h  VirtualInputAdapter.h
src/application/io/output/sdl/: TetrisRenderer.cpp  TextureRenderer.h  Window.cpp  Window.h
src/application/server/: MirrorServer.cpp  MirrorServer.h  MultiplayerServer.cpp  MultiplayerServer.h
src/application/tetris/: GameLogic.cpp  GameLogic.h  InputData.cpp  InputData.h
src/game/: Board.cpp  Board.h  GameLogic.cpp  GameLogic.h  Tetris.cpp  Tetris.h
src/game/client/: Tetris.cpp  Tetris.h
src/game/client/state/: Board.cpp  Board.h  Game.cpp  Game.h  MainMenu.h
src/game/io/: KeyboardAdapter.cpp  KeyboardAdapter.h  Window.cpp  Window.h
src/game/io/input/: SDLInputAdapter.h  VirtualInputAdapter.cpp  VirtualInputAdapter.h
src/game/server/: MirrorServer.cpp  MirrorServer.h
src/game/state/: ApplicationState.h  Board.cpp  Board.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Menu.h  State.h
src/game/utils/: Vec2.cpp
src/networking/: BinarySerialize.cpp  BinarySerialize.h  Networking.cpp  Networking.h  Server.cpp  Server.h  ServerHelper.cpp  ServerHelper.h  SocketWrapper.cpp  SocketWrapper.h
src/utils/: Vec2.cpp  Vec2.h
